@@ -61,7 +61,7 @@ class TestFcntl(unittest.TestCase):
         self.f = None
 
     def tearDown(self):
-        if not self.f.closed:
+        if self.f and not self.f.closed:
             self.f.close()
         unlink(TESTFN)
 
@@ -84,6 +84,21 @@ class TestFcntl(unittest.TestCase):
         if sys.platform not in ['os2emx']:
             rv = fcntl.fcntl(self.f, fcntl.F_SETLKW, lockdata)
         self.f.close()
+
+    def test_fcntl_64_bit(self):
+        # Issue #1309352: fcntl shouldn't fail when the third arg fits in a
+        # C 'long' but not in a C 'int'.
+        try:
+            cmd = fcntl.F_NOTIFY
+            # This flag is larger than 2**31 in 64-bit builds
+            flags = fcntl.DN_MULTISHOT
+        except AttributeError:
+            self.skipTest("F_NOTIFY or DN_MULTISHOT unavailable")
+        fd = os.open(os.path.dirname(os.path.abspath(TESTFN)), os.O_RDONLY)
+        try:
+            fcntl.fcntl(fd, cmd, flags)
+        finally:
+            os.close(fd)
 
 
 def test_main():
